fix: gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -324,7 +324,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 24px;
 }
 
 .social-media-link {
